worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workerapp
spec:
  selector:
    matchLabels:
      app: workerapp
  strategy:
    type: Recreate
  template: 
    metadata:
      labels:
        app: workerapp
    spec:
      containers:
      - image: neo182/workerjib
        name: workerapp
