externalservice-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: externalservice
spec:
  ports:
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: externalservice
  selector:
    app: externalservice
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: externalservice
spec:
  selector:
    matchLabels:
      app: externalservice
  strategy:
    type: Recreate
  template: 
    metadata:
      labels:
        app: externalservice
    spec:
      containers:
      - image: neo182/externalservice
        name: externalservice
        ports:
        - containerPort: 9090
