mongodb-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbmongo
spec:
  ports:
  - port: 27017
  selector:
    app: dbmongo
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbmongo
spec:
  selector:
    matchLabels:
      app: dbmongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dbmongo
    spec:
      containers:
      - image: mongo
        name: dbmongo
        ports:
        - containerPort: 27017
          name: dbmongo
