server-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: serverapp
spec:
  selector:
    app: serverapp
  ports:
  - port: 8080
    targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serverapp
spec:
  selector:
    matchLabels:
      app: serverapp
  strategy:
    type: Recreate
  template: 
    metadata:
      labels:
        app: serverapp
    spec:
      containers:
      - image: neo182/serverapp
        name: serverapp
        ports:
        - containerPort: 8080
